# hirmes

./: !automatic_id.py  .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  build-flask.bat  log.csv  package-lock.json  package.json  requirements.txt  run.bat  run.sh  security_clean.py  shipping.txt  test_re.py
.backend/: indexer.py  search.py  tokenizer.py
backend/: dictionary.py  indexer.py  log.py  read.py  search.py  tokenizer.py
electron_app/: main.js  package-lock.json  package.json
flask-app/: app.py  app.spec  delete_db.py  requirements.txt  security_clean.py  testing.md
flask-app/backend/: database.py  dictionary.py  indexer.py  read.py  search.py  settings.py  stoplist.txt  system.py  tokenizer.py  watchdog.py
flask-app/blueprints/tagging/: __init__.py
flask-app/blueprints/tagging/static/templates/: tagging.html
flask-app/static/css/: styles.css
flask-app/static/js/: ajax_data.js  popup.js  theme-toggle.js
flask-app/templates/: index.html  settings.html
flask-app/tests/: how_to.md  how_to.txt  test_index.py  test_search.py
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  splashscreen.html
static/: styles.css
static/css/: styles.css
templates/: index.html
